--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Новая страница</title>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
 <!--    <table border="1">-->
