--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>{{ name }} Спасибо за отправку! {{ phone }}</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block thanks %}
+
+
+	<!-- Спасибо -->
+  	<section>
+  		<div class="container">
+  			<CENTER style = 'margin-top: 35%; margin-bottom: 35%;'><h1>Спасибо за заявку!</h1></CENTER>
+  		</div>
+  	</section>
+  	<!-- Спасибо -->
+
+{% endblock %}
