--- a/templates/price.html
+++ b/templates/price.html
@@ -1,4 +1,33 @@
-
+{% load static %}
+<!-- Карточки -->
+  	<section>
+  		<div class="container">
+  			<h1 class="text-3">ПАКЕТЫ УСЛУГ</h1>
+  			<div class="row justify-content-center">
+  				<div class="card product_card" style="width: 18rem; background-color: #cd7f32;">
+				  <div class="card-body">
+				    <h5 class="card-title">BRONZE</h5>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <h3>{{ pc_1 }}</h3>
+				  </div>
+				</div>
+				<div class="card product_card" style="width: 18rem; background-color: #c0c0c0;">
+				  <div class="card-body">
+				    <h5 class="card-title">SILVER</h5>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <h3>{{ pc_2 }}</h3>
+				  </div>
+				</div>
+				<div class="card product_card" style="width: 18rem; background-color: #ffd700;">
+				  <div class="card-body">
+				    <h5 class="card-title">GOLD</h5>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <h3>{{ pc_3 }}</h3>
+				  </div>
+				</div>
+  			</div>
+  		</div>
+  	</section>
 
 <!-- Таблица -->
   	<section>
@@ -13,21 +42,13 @@
 			    </tr>
 			  </thead>
 			  <tbody>
+			  {% for obj in price_table %}
 			    <tr>
-			      <td>Услуга 1 Услуга 1 Услуга 1</td>
-			      <td><del>2000</del></td>
-			      <td>1000</td>
+			      <td>{{ obj.pt_title }}</td>
+			      <td><del>{{ obj.pt_old_price }}</del></td>
+			      <td>{{ obj.pt_new_price }}</td>
 			    </tr>
-			    <tr>
-			      <td>Услуга 2 Услуга 2 Услуга 2</td>
-			      <td><del>2000</del></td>
-			      <td>1000</td>
-			    </tr>
-			    <tr>
-			      <td>Услуга 3 Услуга 3 Услуга 3</td>
-			      <td><del>2000</del></td>
-			      <td>1000</td>
-			    </tr>
+			  {% endfor %}
 			  </tbody>
 			</table>
   		</div>
